[package]
name = "canyon-cli"
version = "0.1.0"
authors = ["Liu-Cheng Xu <xuliuchengxlc@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
async-std = { version = "1.6.2", features = ["attributes"] }
async-trait = "0.1.49"
codec = { package = "parity-scale-codec", version = "2.1", features = ["derive", "full"] }
env_logger = "0.8.1"
jsonrpsee-types = "0.2.0"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"
tokio = { version = "1.6", features = ["rt", "macros"] }

subxt = { package = "substrate-subxt", git = "https://github.com/canyon-network/substrate-subxt", branch = "canyon" }

sc-cli = { git = "https://github.com/canyon-network/substrate", branch = "canyon" }

sp-authority-discovery = { git = "https://github.com/canyon-network/substrate", branch = "canyon" }
sp-consensus-babe = { git = "https://github.com/canyon-network/substrate", branch = "canyon" }
sp-core = { git = "https://github.com/canyon-network/substrate", branch = "canyon" }
sp-finality-grandpa = { git = "https://github.com/canyon-network/substrate", branch = "canyon" }
sp-keyring = { git = "https://github.com/canyon-network/substrate", branch = "canyon" }
sp-runtime = { git = "https://github.com/canyon-network/substrate", branch = "canyon" }

frame-support = { git = "https://github.com/canyon-network/substrate", branch = "canyon" }
pallet-indices = { git = "https://github.com/canyon-network/substrate", branch = "canyon" }
pallet-im-online = { git = "https://github.com/canyon-network/substrate", branch = "canyon" }

cp-permastore = { git = "https://github.com/canyon-network/canyon", branch = "master" }
