[package]
name = "canyon-cli"
version = "0.1.0"
authors = ["Liu-Cheng Xu <xuliuchengxlc@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
async-std = { version = "1.6.2", features = ["attributes"] }
async-trait = "0.1.49"
codec = { package = "parity-scale-codec", version = "2.3", features = ["derive", "full"] }
env_logger = "0.8.1"
jsonrpsee-types = "0.3.0"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"
tokio = { version = "1.6", features = ["rt", "macros"] }

subxt = { package = "substrate-subxt", git = "https://github.com/canyon-network/substrate-subxt", branch = "canyon" }

sc-cli = { git = "https://github.com/paritytech/substrate", rev = "c7a6264758ddee13e06908aaf3444febd580a7b4" }

sp-authority-discovery = { git = "https://github.com/paritytech/substrate", rev = "c7a6264758ddee13e06908aaf3444febd580a7b4" }
sp-consensus-babe = { git = "https://github.com/paritytech/substrate", rev = "c7a6264758ddee13e06908aaf3444febd580a7b4" }
sp-core = { git = "https://github.com/paritytech/substrate", rev = "c7a6264758ddee13e06908aaf3444febd580a7b4" }
sp-finality-grandpa = { git = "https://github.com/paritytech/substrate", rev = "c7a6264758ddee13e06908aaf3444febd580a7b4" }
sp-keyring = { git = "https://github.com/paritytech/substrate", rev = "c7a6264758ddee13e06908aaf3444febd580a7b4" }
sp-runtime = { git = "https://github.com/paritytech/substrate", rev = "c7a6264758ddee13e06908aaf3444febd580a7b4" }

frame-support = { git = "https://github.com/paritytech/substrate", rev = "c7a6264758ddee13e06908aaf3444febd580a7b4" }
pallet-indices = { git = "https://github.com/paritytech/substrate", rev = "c7a6264758ddee13e06908aaf3444febd580a7b4" }
pallet-im-online = { git = "https://github.com/paritytech/substrate", rev = "c7a6264758ddee13e06908aaf3444febd580a7b4" }

pallet-poa = { git = "https://github.com/canyon-network/canyon", branch = "initial-network" }
cp-permastore = { git = "https://github.com/canyon-network/canyon", branch = "initial-network" }
